--- a/docs/locale/es/LC_MESSAGES/svg.po
+++ b/docs/locale/es/LC_MESSAGES/svg.po
@@ -1,14 +1,13 @@
+# 
 # Translators:
-# Javier Sarquis <sarquis.translations@gmail.com>, 2020
-# Emanuel Javier Pérez Acha <ejperezacha@outlook.com.ar>, 2020
-# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2020
+# Amy Guy <amy.guy@opendataservices.coop>, 2022
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2019-09-07 08:06+0000\n"
-"PO-Revision-Date: 2019-08-07 15:28+0000\n"
-"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2020\n"
+"POT-Creation-Date: 2022-04-05 17:18+0000\n"
+"PO-Revision-Date: 2022-04-05 16:56+0000\n"
+"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2022\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -150,7 +149,7 @@ msgid "Director)"
 msgstr "Ejecutivo)"
 
 #. (itstool) path: text/tspan
-#: docs/_assets/Diag4-complexInvolve.svg:906
+#: docs/_assets/Diag4-complexInvolve.svg:929
 #, no-wrap
 msgid "50% shares owned by"
 msgstr "50 % de las acciones propiedad de"
