--- a/docs/locale/ru/LC_MESSAGES/examples/index.po
+++ b/docs/locale/ru/LC_MESSAGES/examples/index.po
@@ -4,16 +4,16 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Valery Gusak <valery.gusak@gmail.com>, 2019
+# Amy Guy <amy.guy@opendataservices.coop>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-17 11:38+0100\n"
-"PO-Revision-Date: 2019-06-17 10:44+0000\n"
-"Last-Translator: Valery Gusak <valery.gusak@gmail.com>, 2019\n"
+"POT-Creation-Date: 2022-04-05 17:16+0000\n"
+"PO-Revision-Date: 2022-04-05 16:56+0000\n"
+"Last-Translator: Amy Guy <amy.guy@opendataservices.coop>, 2022\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,27 +21,52 @@ msgstr ""
 "Language: ru\n"
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
-# 352bffb6ec5e4476bab871e5ee4a8fa7
-#: ../../examples/index.rst:2
+#: ../../examples/index.rst:2 47859d888c8e4ab0953f1f343bb85aa2
 msgid "Examples"
 msgstr "Примеры"
 
-# 109ae6eb810a4696a74f3cce9c03dc7c
-#: ../../examples/index.rst:4
+#: ../../examples/index.rst:4 5585b27086254ff7ab8f30d5633df108
 msgid ""
-"The following examples highlight key elements of how ownership and control "
+"The examples below highlight key elements of how ownership and control "
 "information is built up through the use of statements."
 msgstr ""
-"В приведенных ниже примерах показаны ключевые аспекты того, как формируется "
-"информация о владении и контроле через использование записей."
 
-# 002a594d9e624878bb2c4c0144864ef8
-#: ../../examples/index.rst:7
+#: ../../examples/index.rst:6 1b0a00a19b9e470987b81aea62502f08
+msgid ""
+"You can also find examples of valid BODS JSON files in the standard "
+"repository:"
+msgstr ""
+
+#: ../../examples/index.rst:8 985037f829e8437f91e1c5b4a19d7b12
+msgid ""
+"Example data (`v0.3 <https://github.com/openownership/data-"
+"standard/tree/0.3.0/examples>`__  |  `v0.2 "
+"<https://github.com/openownership/data-standard/tree/0.2.0/examples>`__  | "
+"`v0.1 <https://github.com/openownership/data-"
+"standard/tree/0.1.0/examples>`__ )"
+msgstr ""
+
+#: ../../examples/index.rst:9 540e265b7c794115b9247fae4b6878cf
+msgid ""
+"Test data (`v0.3 <https://github.com/openownership/data-"
+"standard/tree/0.3.0/tests/data/entity-statement/valid>`__  |  `v0.2 "
+"<https://github.com/openownership/data-"
+"standard/tree/0.2.0/tests/data/entity-statement/valid>`__  | `v0.1 "
+"<https://github.com/openownership/data-"
+"standard/tree/0.1.0/tests/data/entity-statement/valid>`__ )"
+msgstr ""
+
+#: ../../examples/index.rst:11 8f8a2ca41e404224aa42d2f3f15d1ea6
+msgid ""
+"For a visual rendering of these examples, use the `BODS Visualiser "
+"<https://www.openownership.org/visualisation/visualisation-tool/>`_."
+msgstr ""
+
+#: ../../examples/index.rst:15 81c781118bfd4571b78b1ef949dbe4fd
 msgid "A single direct owner"
 msgstr "Один прямой владелец"
 
-# 47870d596195426f8019fd40ab65fd16
-#: ../../examples/index.rst:9
+#: ../../examples/index.rst:17 842566d6430e472fb9d672088c8f3a95
 msgid ""
 "The example below presents three statements (Entity, Person and "
 "OwnershipOrControl) that describe the 100% beneficial ownership of Chrinon "
@@ -52,13 +77,11 @@ msgstr ""
 "которые описывают 100%-ное бенефициарное владение Криса Таггарта компанией "
 "Chrinon Ltd."
 
-# ffeab5fcfea445b0a26e76ff8047d933
-#: ../../examples/index.rst:15
+#: ../../examples/index.rst:23 fa6bee8fb4c04bfdb1ddf484c6586ef3
 msgid "Joint ownership"
 msgstr "Совместное владение"
 
-# 969269061a084ce2be888502b71ca27e
-#: ../../examples/index.rst:17
+#: ../../examples/index.rst:25 e2381f73ddfe4a43a044d657361d5cba
 msgid ""
 "To model joint ownership, an artificial 'arrangement', owned by the two "
 "parties responsible for it, should be included within a chain of ownership."
@@ -67,13 +90,11 @@ msgstr ""
 "искусственное «соглашение о владении и контроле» между двумя сторонами, "
 "ответственными за него."
 
-# 4628124191be40abbfc980779a8a4484
-#: ../../examples/index.rst:24
+#: ../../examples/index.rst:32 46880042f4564af98b1185d42635127c
 msgid "Updating ownership"
 msgstr "Обновление владения"
 
-# 8fc9d08476fc46599ca3e653151717d5
-#: ../../examples/index.rst:26
+#: ../../examples/index.rst:34 3508a30019f64a78bf31ec3ca7f9ca64
 msgid ""
 "To update a previous statement, a new beneficial ownership statement, with a"
 " ``replacesStatement`` property is required."
@@ -81,8 +102,7 @@ msgstr ""
 "Чтобы обновить предыдущую запись, необходима новая запись о бенефициарном "
 "владении со свойством ``replacesStatement``."
 
-# 0a05d240af9d4a6c83234f3d3dec24ac
-#: ../../examples/index.rst:28
+#: ../../examples/index.rst:36 2c82c39e382f40bf9591c7714adb8921
 msgid ""
 "In the (fictional) example below, the previous statement that Chris Taggart "
 "has 100% ownership of Chrinon Ltd is replaced by a new statement showing 50%"
@@ -94,16 +114,13 @@ msgstr ""
 "записью, отражающей 50%-ное владение. Отдельной записью объявляется, что "
 "владелец остальных 50% еще не был идентифицирован."
 
-# 11eb6f6f53ed4ed0b1fada6c0c0bbfe3
-#: ../../examples/index.rst:30
+#: ../../examples/index.rst:38 dd35d88e4e414936a3096b6550d3e480
 msgid ""
-"Note that only **changed statements** need to new statement identifiers."
+"Note that only **changed statements** need to have new statement "
+"identifiers."
 msgstr ""
-"Обратите внимание, что только для **измененных записей** необходимы новые "
-"идентификаторы записей."
 
-# 570e46560f664d258c98178a34383d62
-#: ../../examples/index.rst:35
+#: ../../examples/index.rst:43 ad8e3916af13407bba2e683c95138a18
 msgid ""
 "When a data file is provided, all the person or entity statements referenced"
 " from an ownershipOrControl statement ``subject`` or ``interestedParty`` "
